# hs-securemem

./: .gitignore  .haskell-ci  .travis.yml  LICENSE  README.md  securemem.cabal
Data/: SecureMem.hs
cbits/: utils.c
tests/src/: TestRunner.hs
tests/src/Data/: SecureMemTests.hs
