Name:                securemem
Version:             0.1.9
Synopsis:            abstraction to an auto scrubbing and const time eq, memory chunk.
Description:
    SecureMem is similar to ByteString, except that it provides a memory chunk that
    will be auto-scrubbed after it run out of scope.
License:             BSD3
License-file:        LICENSE
Copyright:           Vincent Hanquez <vincent@snarc.org>
Author:              Vincent Hanquez <vincent@snarc.org>
Maintainer:          vincent@snarc.org
Category:            Data
Stability:           experimental
Build-Type:          Simple
Homepage:            http://github.com/vincenthz/hs-securemem
Cabal-Version:       >=1.10
extra-doc-files:     README.md

Library
  Exposed-modules:   Data.SecureMem
  Build-depends:     base >= 4 && < 5
                   , bytestring
                   , byteable >= 0.1.1
                   , memory >= 0.7
                   , ghc-prim
  C-sources:         cbits/utils.c
  ghc-options:       -Wall -fwarn-tabs

Test-suite testsuite
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  main-is:             TestRunner.hs
  hs-source-dirs:      tests/src
  build-depends:       base >= 4 && < 5
                     , securemem
                     , tasty                    >= 0.7
                     , tasty-th                 >= 0.1
                     , tasty-hunit              >= 0.4
                     , tasty-quickcheck         >= 0.3
                     , QuickCheck               >= 2.4.0.1
                     , bytestring
                     , text                     >= 0.11
                     , byteable                 >= 0.1.1

source-repository head
  type: git
  location: https://github.com/vincenthz/hs-securemem
